<resources>
    <string name="app_name">FreshPlate</string>
    <string name="bottom_nav_pantry">Pantry</string>
    <string name="bottom_nav_recipes">Recipes</string>
    <string name="bottom_nav_shoppingList">Shopping List</string>
    <string name="quantity_format">Quantity: %d</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="expired">Expired</string>
    <string name="soon">Soon</string>
    <string name="fresh">Fresh</string>
    <string name="do_the_first_step_of_the_recipe">Do the first step of the recipe</string>
    <string name="add_to_shopping_list">Add to Shopping List</string>
    <string name="add_to_shopping_list_title">Add to Shopping List</string>
    <string name="add_to_shopping_list_message">Add "%s" to your shopping list?</string>
    <string name="confirm">Confirm</string>
    <string name="added_to_shopping_list">"%s" added to shopping list</string>
</resources>